# Drug-discovery-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_dashboard.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
01_Toxicity_Prediction/: README.md  Toxicity_Prediction.ipynb  app.py
01_Toxicity_Prediction/models/: xgb_NR_AR.pkl  xgb_NR_AR_LBD.pkl  xgb_NR_AhR.pkl  xgb_NR_Aromatase.pkl  xgb_NR_ER.pkl  (+8 more)
02_ADMET_Properties/: ADMET_Properties_Prediction.ipynb  README.md
03_Activity_Classification/: Activity_Classification.ipynb  README.md
04_Molecule_Generation/: Molecule_Generation_VAE.ipynb  README.md
05_Molecular_Clustering/: Molecular_Clustering.ipynb  README.md  drug_like_molecules.sdf  top_candidates.csv
06_Structure_Based_Design/: README.md  Structure_Based_Design.ipynb
07_Drug_Repurposing/: Drug_Repurposing.ipynb  README.md
api/: README.md  main.py  models.py  predictor.py
dashboard/: app.py  requirements.txt
docs/: EXT_Production_API.md  NB01_Toxicity_Prediction.md  NB02_ADMET_Properties.md  NB03_Activity_Classification.md  NB04_Molecule_Generation.md  NB05_Molecular_Clustering.md  NB06_Structure_Based_Design.md  NB07_Drug_Repurposing.md  PROFESSIONAL_UPGRADES.md  README.md
reports/: ADMET_Properties_Prediction.html  Activity_Classification.html  Drug_Repurposing.html  Molecular_Clustering.html  Molecule_Generation_VAE.html  Structure_Based_Design.html  Toxicity_Prediction.html  index.html
scripts/: export_reports.py
tests/: test_api.py  test_features.py
(+13 files in other folders)
