[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "drug-discovery"
version = "1.0.0"
description = "Machine Learning portfolio for drug discovery: toxicity, ADMET, activity, generation, clustering, SBDD, repurposing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Oleksandr" }]
keywords = ["drug-discovery", "cheminformatics", "machine-learning", "rdkit", "fastapi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Source Code" = "https://github.com/your-username/drug-discovery"
"Dashboard" = "http://localhost:8501"
"API Docs" = "http://localhost:8000/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/drug_discovery"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
